--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MySaleDB;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=EduNext;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
