--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=EduNext;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=12345678
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
@@ -13,3 +13,6 @@ spring.application.name=Edunext
 spring.thymeleaf.cache=false
 welcome.message=Hello Thymeleaf
 error.message=First Name & Last Name is required!
+
+#session
+server.servlet.session.timeout=30m
